✨ feat: update workspace configuration and last open files
- Changed the state type of a tab to "markdown" and set its file to
  "news/2025-07-27.md" for better context.
- Updated the last open files list to include "news/rules.md" and
  removed it from the previous position for improved organization.

--- a/news/2025-07-27.md
+++ b/news/2025-07-27.md
@@ -16,7 +16,7 @@
 ## Enterprise and Framework Developments
 
 ### **Multi-Agent Framework Rankings (July 2025)**
-![Top AI Agent Frameworks](https://www.shakudo.io/blog/top-9-ai-agent-frameworks)
+[Top AI Agent Frameworks](https://www.shakudo.io/blog/top-9-ai-agent-frameworks)
 
 **Leading Platforms:**
 - **LangGraph**: Highest scalability (9/10), best for complex stateful workflows
